objects/TimeLog__c.object
<CustomObject>
    <description>Use this object to enter the time log for particular Project under an Account</description>
    <fields>
        <fullName>Account_Customer__c</fullName>
        <formula>Related_Project__r.Customer__r.Name</formula>
        <label>Account (Customer)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break__c</fullName>
        <inlineHelpText>Any unbillable hours spent?</inlineHelpText>
        <label>Break</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the TimeLog entry</description>
        <inlineHelpText>What is this about?</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Hours spent</description>
        <formula>ROUND((DATETIMEVALUE(End_Time__c) - DATETIMEVALUE(Start_Time__c)) * 24 - Break__c, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates time spent in hours. End - Start - Break = Duration</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>End time</description>
        <inlineHelpText>Enter the End time for the TimeLog</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Discussion_Date__c</fullName>
        <inlineHelpText>Next Discussion with the Customer</inlineHelpText>
        <label>Next Discussion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates weather a customer should be charged for his TimeLog entry</description>
        <inlineHelpText>Check the box to avoid billing the client for this TimeLog entry</inlineHelpText>
        <label>No Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Item__c</fullName>
        <formula>text(Related_Project__r.PS_item__c)</formula>
        <label>PS Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Main_Item__c</fullName>
        <label>PS Main Item</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AutoRABIT Implementation</fullName>
                </value>
                <value>
                    <fullName>Annual Activities</fullName>
                </value>
                <value>
                    <fullName>Playground</fullName>
                </value>
                <value>
                    <fullName>CS Core</fullName>
                </value>
                <value>
                    <fullName>Other activities</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Internal Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_Sub_Item__c</fullName>
        <inlineHelpText>Choose the PS sub item related to the PS Item</inlineHelpText>
        <label>PS Sub Item</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PS_Main_Item__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Release Automation Discovery</fullName>
                </value>
                <value>
                    <fullName>AutoRABIT Administration Set Up</fullName>
                </value>
                <value>
                    <fullName>AutoRABIT User Training</fullName>
                </value>
                <value>
                    <fullName>Release Automation Modelling with AutoRABIT</fullName>
                </value>
                <value>
                    <fullName>Annual - AutoRABIT Training Pack</fullName>
                </value>
                <value>
                    <fullName>Annual - Pre-CI Sandbox Alignment</fullName>
                </value>
                <value>
                    <fullName>Annual - Complex Sandbox Metadata Deployment [ Upto 4 Sandboxes ]</fullName>
                </value>
                <value>
                    <fullName>Annual - Production Deployment Hotline 	[ Upto 6 client releases]</fullName>
                </value>
                <value>
                    <fullName>Annual - Salesforce Production Org Split/ setup</fullName>
                </value>
                <value>
                    <fullName>Playground Infrastructure Prep</fullName>
                </value>
                <value>
                    <fullName>Playground Task Review and sign-off</fullName>
                </value>
                <value>
                    <fullName>Playground session running through the scenarios</fullName>
                </value>
                <value>
                    <fullName>Playground Review sessions, touch points</fullName>
                </value>
                <value>
                    <fullName>Discussion and Follow-ups with Product team for any issues</fullName>
                </value>
                <value>
                    <fullName>Playground wrap-up and transition to Sales Team</fullName>
                </value>
                <value>
                    <fullName>Overview Demo</fullName>
                </value>
                <value>
                    <fullName>CS Core - Working with Salesforce Architect Community</fullName>
                </value>
                <value>
                    <fullName>CS Core - Working with Salesforce Product Management Team</fullName>
                </value>
                <value>
                    <fullName>CS Core - Working with Marketing Team</fullName>
                </value>
                <value>
                    <fullName>CS Core - Work with Account Management Team</fullName>
                </value>
                <value>
                    <fullName>CS Core - AutoRABIT CRM</fullName>
                </value>
                <value>
                    <fullName>CS Core - AutoRABIT Academy</fullName>
                </value>
                <value>
                    <fullName>CI Job Setup</fullName>
                </value>
                <value>
                    <fullName>EZ-Commits Setup</fullName>
                </value>
                <value>
                    <fullName>Org Synchronization setup</fullName>
                </value>
                <value>
                    <fullName>TAF Setup</fullName>
                </value>
                <value>
                    <fullName>Data Loader Pro setup</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
                <value>
                    <fullName>Playground Planning Session</fullName>
                </value>
                <value>
                    <fullName>Initial Discovery Call w/ Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <description>Look-up to Project.</description>
        <inlineHelpText>Project to which you would need the time to be rolled up.</inlineHelpText>
        <label>Professional Service</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>TimeLogs</relationshipLabel>
        <relationshipName>TimeLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>Total Revenue generated by this Timelog</description>
        <formula>IF(No_Charge__c, 0, Duration__c *  Related_Project__r.Billable_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Revenue generated by this timelog</inlineHelpText>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Start Time</description>
        <inlineHelpText>Enter your start time for this entry</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the user who filed the Time Log</description>
        <inlineHelpText>Your Name?</inlineHelpText>
        <label>AutoRABIT Engg</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TimeLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TimeLog</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TL-{YYYY}{MM}-{0}</displayFormat>
        <label>TimeLog ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeLogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>